--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cyber-rush.github.io/box-office-app",
   "dependencies": {
     "@tanstack/react-query": "^4.35.3",
     "components": "^0.1.0",
     "cra-template-pwa": "2.0.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -19,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.{js,jsx}"
+    "format": "prettier --write src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
